--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,7 +7,7 @@ and open the template in the editor.
     <head>
         <title>Mi primer página en HTML5</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        
+        <link rel="stylesheet" type="text/css" media="all" href="css/estilos.css"/>
     </head>
     <body>
         <header>
