--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,35 +5,32 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <title>Mi primer página en HTML5</title>
+        <title>Estructura Básica Semántica en HTML5 y CSS3</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta name="description" content="Estructura Básica Semántica en HTML5 y CSS3 con responsive design" />
         <link rel="stylesheet" type="text/css" media="all" href="css/estilos.css"/>
     </head>
     <body>
+        <h1>Estructura Básica Semántica en HTML5 y CSS3</h1>
         <header>
-            <h1>Este es el título de mi web</h1>
-            <figure>
-                Aquí va nuestro logo
-                <figcaption>Título de nuestro logo</figcaption>
-            </figure>
+            Heather
         </header>
         <nav>
-            Aquí va nuestro menú...
+            Nav
         </nav>
-        <section>
-            <hgroup>
-                <h1>Mi encabezado secundario.</h1>
-                <h2>Este es un encabezado de tipo h2.</h2>
-            </hgroup>
-            <article>
-                Este es un artículo de contenido.
-                <section>
-                    Esta es otra sección dentro de un artículo.
-                </section>
-            </article>
+        <section id="contenedor">
+            <section id="principal">
+                Section
+                <article>
+                    Article
+                </article>
+            </section>
+            <aside>
+                Aside
+            </aside>
         </section>
         <footer>
-            Aprendiendo HTML con
+            Footer
             <a href="https://plus.google.com/u/0/+CarlosdeLeónGalindo">
                 Carlos de León
             </a>
