Información Semántica añadida...

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,10 +5,16 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <title>Estructura Básica Semántica en HTML5 y CSS3</title>
+        <title>Sitio con Responsive Web Design en HTML5, CSS3 y jQuery</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta name="description" content="Estructura Básica Semántica en HTML5 y CSS3 con responsive design" />
+        <meta name="description" content="Bienvenido a mi portafolio Web hecho en HTML5, CSS3 y jQuery con Responsive Web Design" />
+        <meta name="viewport" content="width=device-width,initial-scale=1"/>
+        <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico"/>
+        <link rel="author" type="tex/plain" href="/about/humans.txt"/>
         <link rel="stylesheet" type="text/css" media="all" href="css/estilos.css"/>
+        <!--[]>
+            <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
     </head>
     <body>
         <h1>Estructura Básica Semántica en HTML5 y CSS3</h1>
