Comenzamos con Responsive Design...

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -19,25 +19,35 @@ and open the template in the editor.
     <body>
         <h1>Estructura Básica Semántica en HTML5 y CSS3</h1>
         <header>
-            Heather
+            <h1>
+                <a href="index.html">
+                    <img class="fade" alt="bextlan.com lugar bit, vectores y píxeles" src="img/bextlan-logo.png"/>
+                </a>
+            </h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="acerca.html">Acerca</a></li>
+                    <li><a href="servicios.html">Servicios</a></li>
+                    <li><a href="trabajos.html">Trabajos</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
         </header>
-        <nav>
-            Nav
-        </nav>
         <section id="contenedor">
             <section id="principal">
                 Section
-                <article>
-                    Article
+                <article id="galeria-inicio">
+                    Aquí habrá una galería con jQuery...
                 </article>
             </section>
             <aside>
-                Aside
+                Widgets Sociales...
             </aside>
         </section>
         <footer>
-            Footer
-            <a href="https://plus.google.com/u/0/+CarlosdeLeónGalindo">
+            Aprendiendo HTML5, CSS3, jQuery y Responsivcve Web Design con
+            <a rel="autor" href="https://plus.google.com/u/0/+CarlosdeLeónGalindo" target="_blank">
                 Carlos de León
             </a>
         </footer>
