--- a/public_html/index.html
+++ b/public_html/index.html
@@ -69,7 +69,19 @@ and open the template in the editor.
                 </article>
             </section>
             <aside>
-                Widgets Sociales...
+                Widgets Sociales...<br/>
+                <!--Twitter-->
+                <script src="http://platform.twitter.com/widgets.js"></script>
+                <a href="http://twitter.com/share" class="twitter-share-button" data-text="#bextlan.com | lugar de bits, vectores y píxeles." data-url="http://bextlan.com" data-count="vertical">Twittear</a>                    
+                <!--Facebook-->
+                <div id="fb-root"></div>
+                <script src="http:\\connect.facebook.net/es_LA/all.js#xfbml=1"></script>
+                <fb:like href="https://www.facebook.com/pragmatips" send="false" layout="box_count"></fb:like>
+                <!--Publicidad-->
+                <a class="fade" href="http://geekonos.com" target="_blank">
+                    <img src="img/logo-geekonos.png" alt="geekonos"/>
+                    <figcaption>Geekonos</figcaption>
+                </a>
             </aside>
         </section>
         <footer>
