--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,7 +13,10 @@ and open the template in the editor.
         <link rel="author" type="tex/plain" href="/about/humans.txt"/>
         <link rel="stylesheet" type="text/css" media="all" href="css/flexslider.css"/>
         <link rel="stylesheet" type="text/css" media="all" href="css/estilos.css"/>
-        <script src="https:\\ajax.googleapis.com\ajax\libs\jquery\1.7.1\jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+        <script>
+            !window.jQuery && document.write("<script src='js/jquery.min.js'><\/script>")
+        </script>
         <script src="js/jquery.flexslider-min.js"></script>
         <!--[]>
             <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
